name:                hurl
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
-- license-file:        LICENSE
author:              Craig Roche
maintainer:          cdxr01@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Physics.Hurl
  -- other-modules:       
  build-depends:       base ==4.6.*, linear ==1.2.*, mtl ==2.1.*, exceptions ==0.3.*, StateVar ==1.0.*, Hipmunk ==5.2.*
