name:                hurl
version:             0.1.0.0
synopsis:            a high-level interface to the Chipmunk physics library
-- description:         
license:             MIT
license-file:        LICENSE
author:              Craig Roche
maintainer:          cdxr01@gmail.com
copyright:           Copyright (c) 2013 Craig Roche
category:            Game
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Physics.Hurl
    Physics.Hurl.Geometry
    Physics.Hurl.Solid
    Physics.Hurl.Space
    Physics.Hurl.ObjectRef
    Physics.Hurl.Constraint
    Physics.Hurl.Query
    Physics.Hurl.Internal.Shape
    Physics.Hurl.Internal.Space
  other-modules:
    Physics.Hurl.Internal.Resource
    Physics.Hurl.Internal.Utils
  build-depends:
    base         == 4.6.*,
    containers   == 0.5.*,
    linear       == 1.2.*,
    lens         == 3.9.*,
    mtl          == 2.1.*,
    exceptions   == 0.3.*,
    transformers == 0.3.*,
    StateVar     == 1.0.*,
    Hipmunk      == 5.2.*

Test-Suite properties
    type:           exitcode-stdio-1.0
    main-is:        properties.hs
    hs-source-dirs: test, .
    build-depends:  base,
                    QuickCheck        >=2.6,
                    test-framework    >=0.8,
                    test-framework-th >=0.2
